--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>custome-util</module>
         <module>doubble-test</module>
         <module>spring-test</module>
+        <module>web-test</module>
     </modules>
 
     <properties>
@@ -119,7 +120,6 @@
                 <artifactId>jedis</artifactId>
                 <version>3.1.0</version>
             </dependency>
-
             <dependency>
                 <groupId>fast-md5</groupId>
                 <artifactId>fast-md5</artifactId>
