--- a/web-test/pom.xml
+++ b/web-test/pom.xml
@@ -5,37 +5,31 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.insist</groupId>
-  <artifactId>spring-test</artifactId>
+  <artifactId>web-test</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>spring-test</name>
+  <name>web-test</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
 
   <dependencies>
-
-
-    <dependency>
-      <artifactId>global-lnp-anc</artifactId>
-      <groupId>com.cainiao.global.lnp</groupId>
-      <version>1.0.4-SNAPSHOT</version>
-    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+
     <dependency>
-      <groupId>com.cainiao.global.lnp</groupId>
-      <artifactId>global-lnp-anc-client</artifactId>
-      <version>1.0.4-SNAPSHOT</version>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.68.noneautotype</version>
     </dependency>
   </dependencies>
 </project>
