--- a/custome-util/pom.xml
+++ b/custome-util/pom.xml
@@ -123,12 +123,23 @@
       <version>5.0.13.RELEASE</version>
     </dependency>
 
+    <dependency>
+      <groupId>net.sf.dozer</groupId>
+      <artifactId>dozer</artifactId>
+      <version>5.5.1</version>
+    </dependency>
+
     <!-- spring end -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>net.sf.dozer</groupId>
+      <artifactId>dozer</artifactId>
+      <version>5.4.0</version>
     </dependency>
 
 
